# Fit-plan-hub

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
attached_assets/: Pasted-Role-You-are-a-senior-full-stack-engineer-and-system-ar_1765709344936.txt
backend/: auth.py  database.py  main.py  models.py  schemas.py
backend/routes/: auth_routes.py  plan_routes.py  trainer_routes.py  user_routes.py
client/: package-lock.json
